samples/_failures_safe/1761655326_1bc5c8_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_5b29781b.c: In function ‘main’:
./samples/SAFE/__tmp_5b29781b.c:124:5: error: expected expression at end of input
  124 |     return
      |     ^~~~~~
./samples/SAFE/__tmp_5b29781b.c:124:5: error: expected declaration or statement at end of input
